# kadai

./: LICENSE  README.md  main.py  pyproject.toml
pack_test/: kadai_E_1.py  test1.py
